# pathlibfs

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pull_request.yaml  release.yaml  release_pull_request.yaml
src/pathlibfs/: __init__.py  exception.py  path.py  s3_support.py
tests/: test_basic.py  test_gcs.py  test_local.py  test_s3.py
