[tool.poetry]
name = "pathlibfs"
version = "0.1.0"
description = ""
authors = ["Hiroyuki Tanaka <aflc0x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fsspec = "^2022.5.0"

[tool.poetry.dev-dependencies]
s3fs = "^2022.5.0"
ipython = '*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
