[tool.poetry]
name = "pathlibfs"
version = "0.1.0"
description = ""
authors = ["Hiroyuki Tanaka <aflc0x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fsspec = "^2022.5.0"

[tool.poetry.dev-dependencies]
s3fs = "^2022.5.0"
gcsfs = "^2022.5.0"
adlfs = "^2022.2.0"
ipython = '*'
pytest = "^7.1.2"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.mypy]
python_version = "3.7"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
